--- a/posts/2015-11-26 élasticité - scénario montage.ipynb
+++ b/posts/2015-11-26 élasticité - scénario montage.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 175,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -145,15 +145,15 @@
     "            \n",
     "    matpath = 'mat/'\n",
     "    z_s = {}\n",
-    "    #print('importing scenarii')\n",
+    "    print('importing scenarii')\n",
     "    for scenario in [#'line_vague_dense', 'line_vague_solo', \n",
     "                     'line_onde_dense', 'line_onde_solo', 'line_fresnelastique',\n",
     "                    'line_fresnelastique_choc', 'line_fresnelastique_chirp', \n",
     "                     'line_geometry', 'line_geometry_45deg', 'line_geometry_structure']:\n",
     "        z_s[scenario] = np.load(os.path.join(matpath, scenario + '.npy'))\n",
-    "        #print(scenario)\n",
+    "        print(scenario)\n",
     "        el.check(e, z_s[scenario])\n",
-    "    #print('finished importing scenarii')    \n",
+    "    print('finished importing scenarii')    \n",
     "    ###########################################################################\n",
     "    burnout_time = 4.\n",
     "    z = np.zeros((1, N_lame+1)) # zero at zero\n",
@@ -178,12 +178,17 @@
     "    z = montage(z, z_s['line_fresnelastique_choc'])\n",
     "    z = montage(z, z_s['line_geometry'])\n",
     "    z = montage(z, z_s['line_geometry_structure'])\n",
+    "\n",
     "    ###########################################################################\n",
+    "    el.check(e, z)\n",
+    "    print(40*'-😐-')\n",
+    "    caca\n",
     "    z = montage(z, z_s['line_fresnelastique'])\n",
     "    z = montage(z, interleave(z_s['line_fresnelastique'], mirror(z_s['line_fresnelastique'])))\n",
     "    z = montage(z, interleave(z_s['line_fresnelastique_chirp'], mirror(z_s['line_fresnelastique_choc'])))\n",
     "    z = montage(z, interleave(z_s['line_fresnelastique_choc'], mirror(z_s['line_fresnelastique_chirp'])))\n",
     "    ###########################################################################\n",
+    "\n",
     "    z = montage(z, z_s['line_geometry'])\n",
     "    z = montage(z, z_s['line_onde_dense'])\n",
     "    \n",
@@ -214,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 176,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -225,14 +230,44 @@
      "output_type": "stream",
      "text": [
       "/Users/laurentperrinet/cloud_nas/science/elasticte\n",
-      "!! /Z\\ !! @  23650  overflow @  9 181 2.379375\n",
-      "!! /Z\\ !! @  23650  overflow @  16 154 2.025\n",
-      "!! /Z\\ !! @  44194  overflow @  9 181 2.375625\n",
-      "!! /Z\\ !! @  44194  overflow @  16 154 2.025\n",
-      "!! /Z\\ !! @  72994  overflow @  9 181 2.37937500001\n",
-      "!! /Z\\ !! @  72994  overflow @  16 154 2.02875\n",
-      "!! /Z\\ !! @  101794  overflow @  9 180 2.37000000002\n",
-      "!! /Z\\ !! @  101794  overflow @  16 154 2.0325\n",
+      "rm: mat/master.npy: No such file or directory\n",
+      "importing scenarii\n",
+      "line_onde_dense\n",
+      "line_onde_solo\n",
+      "line_fresnelastique\n",
+      "line_fresnelastique_choc\n",
+      "line_fresnelastique_chirp\n",
+      "line_geometry\n",
+      "!! /Z\\ !! @  7201  overflow @  9 180 2.371875\n",
+      "!! /Z\\ !! @  7201  overflow @  16 154 2.02125\n",
+      "line_geometry_45deg\n",
+      "line_geometry_structure\n",
+      "finished importing scenarii\n",
+      "!! /Z\\ !! @  23651  overflow @  9 181 2.379375\n",
+      "!! /Z\\ !! @  23651  overflow @  16 154 2.025\n",
+      "!! /Z\\ !! @  44195  overflow @  9 181 2.375625\n",
+      "!! /Z\\ !! @  44195  overflow @  16 154 2.025\n",
+      "!! /Z\\ !! @  72995  overflow @  9 181 2.37937500001\n",
+      "!! /Z\\ !! @  72995  overflow @  16 154 2.02875\n",
+      "-😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐--😐-\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'caca' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/Users/laurentperrinet/cloud_nas/science/elasticte/scenario_line_master.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'writer'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m         \u001b[0mz_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmaster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0;31m# running the code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/laurentperrinet/cloud_nas/science/elasticte/scenario_line_master.py\u001b[0m in \u001b[0;36mmaster\u001b[0;34m(e, filename)\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[0mel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m'-😐-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m     \u001b[0mcaca\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m     \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmontage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_s\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'line_fresnelastique'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m     \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmontage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minterleave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz_s\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'line_fresnelastique'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmirror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz_s\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'line_fresnelastique'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'caca' is not defined"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "/Users/laurentperrinet/cloud_nas/science/elasticte/posts\n"
      ]
     }
@@ -246,33 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.0, 103841.0, 0.0, 3465.333333333333)"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA3AAAADDCAYAAADDXPORAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHelJREFUeJzt3X2QXXWZ4PHvA5E3eTGgSYBAeJegIiRN3F1niztjjc7u\nOkDNjhF3V3BA13KHIew4WybM7NJaUzWGWkfBXXd3dhwVCxcdd2cEByEy2uU4hZgbXuU1ggkkkKAC\ngchbmjz7xz2HnPuWDunu+9L9/VTdys3JuX1PVx2p+nqe8zuRmUiSJEmSBt8+/T4ASZIkSdKeMeAk\nSZIkaUgYcJIkSZI0JAw4SZIkSRoSBpwkSZIkDYk5/T6ATiLCpTElSZIkzWqZGa3bBjLgAHy8gfpp\ndHSU0dHRfh+GZjHPQfWb56AGgeeh+m2qz8Ff/ALWrWt+Pf00nHkmLF3aeI2MwEknwb77trUbMMAB\nJ0mSJEnDaqJY+93fhT/7s0as7fMabmwz4CRJkiRpEqqxVq83/nzmGViyZHKx1okBJ3VQq9X6fQia\n5TwH1W+egxoEnofqt07n4M9/3n5lrRpr73sffPrTUxNrncQg3msWETmIxyVJkiRp9pgo1kZGGn+e\neOLUx1pEdFzExICTJEmSNOu1xlq9Dtu27VpcpHxNR6x1YsBJkiRJErtirbxfbd06ePbZXVfWeh1r\nnRhwkiRJkmadJ59sH4NsjbWRETjhhP7FWicGnCRJkqQZrTXW6nV47rlGrJX3qy1dOnix1okBJ0mS\nJGnGKGOtOgb53HPt96wNQ6x1YsBJkiRJGkpbt7aPQW7f3vmetWhLnuFkwEmSJEkaeBPFWjkKecIJ\nMyfWOjHgJEmSJA2U1lir1+FXv+o8BjmTY60TA06SJElS35SxVr1nzVjrzoCTJEmS1BNbtrSPQbbG\n2sgIHH+8sdaNASdJkiRpyrXGWr0OL7zQvnS/sfbaGHCSJEmSJqWMteoY5AsvtI9BGmuTZ8BJkiRJ\n2mNPPNE+BtkaayMjcNxxxtp02OuAi4j9gR8A+xWvb2Xm5RExF/g6sAjYACzPzG3FZ1YBFwHjwIrM\nXFNsXwJ8GTgAuDEzL+vynQacJEmS1CMTxVo5Cmms9c6krsBFxEGZ+XxE7Av8I/Bx4Bzgl5l5ZUR8\nApibmSsj4jTgWuAsYCFwC3ByZmZE3AZckplrI+JG4KrMvLnD9xlwkiRJ0jSoxlo5Cvnii833qxlr\n/dct4ObsyYcz8/ni7f7APsDTwLnA2cX2rwBjwEoaYXddZo4DGyJiPbAsIjYCh2Tm2uIz1wDnAW0B\nJ0mSJGnyHn+8/craSy/tirQLL4SrrzbWhskeBVxE7AOsA04E/mdm3hcR8zNzK0BmbomIecXuRwO3\nVj6+udg2DmyqbN9UbJckSZI0SRPF2oc+BJ//PCxaZKwNsz29ArcTODMiDgVujoga0DrjOKUzj6Oj\no6++r9Vq1Gq1qfzxkiRJ0tBqjbV6HV5+edcYpLE2fMbGxhgbG5twv9e8CmVE/GfgBeBioJaZWyNi\nAfD9zFwcESuBzMzVxf43AVcAG8t9iu3nA2dn5sc6fIf3wEmSJEnsirXq0v07drQv3W+szSyTWYXy\njcCOzNwWEQfSuGftk8C7gacyc3WXRUzeQWNE8rvsWsTkR8ClwFrg74CrM/OmDt9pwEmSJGnWefzx\n5lDrFGsjI3DsscbaTDeZgHsbjUVKgsYCJl/NzP8aEYcD3wCOoXF1bXlmPlN8ZhWNK3Q7aH6MwFKa\nHyOwost3GnCSJEmasTI737NWxlp1RUhjbXbyQd6SJElSH7TGWnmF7ZVX2scgjTWVDDhJkiRpmpWx\n1joG2RprIyNwzDHGmroz4CRJkqQplAmbN7ePQVZjrRyFNNb0WhlwkiRJ0l7qFGv1Ouzc2Xy/mrGm\nqWLASZIkSXugGmvVUcjM9nvWjDVNFwNOkiRJapEJmza1j0FWY628wrZwobGm3jHgJEmSNKt1irV6\nvfFvrUv3G2vqNwNOkiRJs0Y11qpjkBHtY5DGmgaRASdJkqQZqYy11qX7W2NtZASOPtpY03Aw4CRJ\nkjT0MuGxx9rvWavGWjkKaaxpmBlwkiRJGiqtsVZeYdtnn/al+401zTQGnCRJkgZWNdaqo5D77tt+\nz5qxptnAgJMkSdJAyIRHH20fg6zGWnmF7aijjDXNTgacJEmSem53sdY6BmmsSbsYcJIkSZpW1Vgr\nxyBvvx3mzGkfgzTWpN0z4CRJkjRlylhrXbr/da9rX7r/qKP6fbTS8NnrgIuIhcA1wHxgJ/AXmfn5\niLgC+AjwZLHr5Zl5U/GZVcBFwDiwIjPXFNuXAF8GDgBuzMzLunynASdJkjQgMmHjxvYxyDLWqqOQ\nxpo0NSYTcAuABZl5Z0QcDKwDzgXeDzyXmX/esv9i4GvAWcBC4Bbg5MzMiLgNuCQz10bEjcBVmXlz\nh+804CRJkvqgNdbq9cYY5H77dR6DlDQ9ugXcnIk+mJlbgC3F++0RcT9wdPlzO3zkXOC6zBwHNkTE\nemBZRGwEDsnMtcV+1wDnAW0BJ0mSpOlXxlp1DLI11v7gD4w1aZBMGHBVEXEccAZwG/BrwCUR8UGg\nDnw8M7fRiLtbKx/bXGwbBzZVtm9iVwhKkiRpGmXChg3tY5D7778r1i69tPHnkUf2+2gldbPHAVeM\nT36Txj1t2yPiC8CnitHIPwU+A3x4qg5sdHT01fe1Wo1arTZVP1qSJGlG212slferGWvSYBkbG2Ns\nbGzC/fZoFcqImAN8G/hOZl7V4d8XATdk5ukRsRLIzFxd/NtNwBXARuD7mbm42H4+cHZmfqzDz/Me\nOEmSpD1QjbXq0v0HHNB+z5qxJg2Pvb4HrvBXwH3VeIuIBcX9cQC/A/ykeH89cG1EfJbGiORJwI+L\nK3XbImIZsBa4ALh6734dSZKk2ScTfvaz5qtqrbF22WWNPxcs6PfRSpoOe7IK5TuBHwD3AFm8Lgf+\nDY374XYCG4CPZubW4jOrgIuBHTQ/RmApzY8RWNHlO70CJ0mSZrVOsbZuHRx4YPOy/caaNDP5IG9J\nkqQB1Rpr5dL9Bx3UPgZprEmzgwEnSZI0AMpYa12631iTVGXASZIk9VgmPPJI+z1rZaxVRyHnz+/3\n0UoaJAacJEnSNOoUa+vWwcEHt19ZM9YkTcSAkyRJmiLVWKsu3W+sSZoqBpwkSdJeyISHH24fg6zG\n2sgILFlirEmaOgacJEnSBDrF2rp1cMgh7Uv3z5vX76OVNJMZcJIkSRXVWKuOQR56aPsYpLEmqdcM\nOEmSNGuVsda6dL+xJmlQGXCSJGlW2Lmz8z1rZayVo5BLlhhrkgaXASdJkmac1lir1+GOO+Cww9qv\nrL3pTf0+WknacwacJEkaamWsVccgjTVJM5UBJ0mShsbOnfDTnzaPQbbGWrl0v7EmaSYy4CRJ0kDq\nFGu33w5veEPz0v3GmqTZxICTJEl9V421chTyjjtg7tz2Mcg3vrHfRytJ/WPASZKknipjrfWetWqs\nlWOQxpokNdvrgIuIhcA1wHxgJ/C/M/PqiJgLfB1YBGwAlmfmtuIzq4CLgHFgRWauKbYvAb4MHADc\nmJmXdflOA06SpCGycyesX99+z9rcue1jkMaaJE1sMgG3AFiQmXdGxMHAOuBc4PeAX2bmlRHxCWBu\nZq6MiNOAa4GzgIXALcDJmZkRcRtwSWaujYgbgasy8+YO32nASZI0oFpjrVy6/4gjmkcgjTVJ2nvd\nAm7ORB/MzC3AluL99oi4n0aYnQucXez2FWAMWAmcA1yXmePAhohYDyyLiI3AIZm5tvjMNcB5QFvA\nSZKkwVDGWusYZDXW/viPG38ecUS/j1aSZr4JA64qIo4DzgB+BMzPzK3QiLyImFfsdjRwa+Vjm4tt\n48CmyvZNxXZJkjQAdu6Ehx5qH4MsY21kBP7kTxpX1ow1SeqPPQ64YnzymzTuadseEa0zjlM68zg6\nOvrq+1qtRq1Wm8ofL0nSrNYt1t74xl1X1ow1SeqdsbExxsbGJtxvj1ahjIg5wLeB72TmVcW2+4Fa\nZm4t7pP7fmYujoiVQGbm6mK/m4ArgI3lPsX284GzM/NjHb7Pe+AkSZoi1VgrRyHvvLM51sp71ow1\nSRoMk3qMQERcA/wiM/+wsm018FRmru6yiMk7aIxIfpddi5j8CLgUWAv8HXB1Zt7U4fsMOEmS9sIr\nr7RfWWuNtXLp/sMP7/fRSpK6mcwqlO8EfgDcQ2NMMoHLgR8D3wCOoXF1bXlmPlN8ZhVwMbCD5scI\nLKX5MQIrunynASdJ0gQ6xdodd8Cb3tS+dL+xJknDxQd5S5I0xKqxVh2DnDevfQzSWJOk4WfASZI0\nJMpYqy7d3xpr5Rjk3Ln9PlpJ0nQw4CRJGkCvvAIPPth+z9q8ee1jkMaaJM0eBpwkSX3WLdbmz28f\ngzTWJGl2M+AkSeqhaqyVo5B33WWsSZL2jAEnSdI0eeUVeOCB5itrrbE2MgJnnmmsSZL2jAEnSdIU\n6BRrd94JCxa037P2hjf0+2glScPKgJMk6TWqxlp1DPLII9vHII01SdJUMuAkSdqNMtaqS/e3xlo5\nBmmsSZKmmwEnSVJhfLzzPWtHHtk8BmmsSZL6xYCTJM1KrbFWr8Pdd8NRRzWPQRprkqRBYsBJkma8\nMtaqY5CdYm3JEjjssH4frSRJ3RlwkqQZZXwc7r+/eQyyGmvlKOSZZxprkqThY8BJkoZWp1i76y5Y\nuLB9DNJYkyTNBAacJGkoVGOtHIW8+25jTZI0uxhwkqSBU8Za6z1r1Vgrl+4/9NB+H60kSb2z1wEX\nEV8E3gtszczTi21XAB8Bnix2uzwzbyr+bRVwETAOrMjMNcX2JcCXgQOAGzPzst18pwEnSTPM+Djc\nd1/7PWsLF7Yv3W+sSZJmu8kE3K8B24FrWgLuucz885Z9FwNfA84CFgK3ACdnZkbEbcAlmbk2Im4E\nrsrMm7t8pwEnSUOsNdbqdbjnHjjmmPYxSGNNkqR23QJuzkQfzMwfRsSiTj+zw7ZzgesycxzYEBHr\ngWURsRE4JDPXFvtdA5wHdAw4SdLwKGOtOgbZGmvLl8MZZxhrkiRN1oQBtxuXRMQHgTrw8czcBhwN\n3FrZZ3OxbRzYVNm+qdguSRoiO3a0j0GWsVaOQb7//Y0ra4cc0u+jlSRp5tnbgPsC8KliNPJPgc8A\nH566w4LR0dFX39dqNWq12lT+eEnSBLrF2rHH7rqyZqxJkjQ1xsbGGBsbm3C/PVqFshihvKG8B67b\nv0XESiAzc3XxbzcBVwAbge9n5uJi+/nA2Zn5sS7f5z1wktRD1VgrRyF/8pPmWCvvWTPWJEmafnt9\nD1z5eSr3vEXEgszcUvz1d4CfFO+vB66NiM/SGJE8CfhxcaVuW0QsA9YCFwBX792vIkmajB074N57\nm6+sVWNtZAQ+8IHGPWvGmiRJg2XCgIuIrwE14IiIeJTGFbVfj4gzgJ3ABuCjAJl5X0R8A7gP2AH8\nh8qltN+n+TECN03pbyJJatMp1u65B447btdVNWNNkqTh4YO8JWmGqMZaOQZ5772waFHzGKSxJknS\n4Nvr58D1gwEnSbtXxlp16f7WWBsZacTawQf3+2glSdJrZcBJ0pDasaNxj1p1DLKMtXLp/vLKmrEm\nSdLMYMBJ0hB4+eXOC4wcf3z7GKSxJknSzGXASdKAqcZa9Z41Y02SJBlwktRHL7/ceQyyjLVyFPKM\nM+D1r+/30UqSpH4z4CSpR7rF2gkntF9ZM9YkSVInBpwkTYNqrJVjkPfdZ6xJkqTJMeAkaZLKWKsu\n3d8aayMj8Pa3G2uSJGlyDDhJeg1efhnuuad5DLKMterS/caaJEmaDgacJHXx0kvN96zV63D//XDi\nic1jkMaaJEnqFQNOktgVa9UxyNZYK8cgDzqo30crSZJmKwNO0qzz0kvtY5BlrLWOQRprkiRpkBhw\nkma0brF20kntY5DGmiRJGnQGnKQZoxpr5SjkAw8Ya5IkaeYw4CQNpTLWqvesVWOtHIU8/XRjTZIk\nzRx7HXAR8UXgvcDWzDy92DYX+DqwCNgALM/MbcW/rQIuAsaBFZm5pti+BPgycABwY2ZetpvvNOCk\nWeill+Duu5vHIB94AE4+uf3K2oEH9vtoJUmSps9kAu7XgO3ANZWAWw38MjOvjIhPAHMzc2VEnAZc\nC5wFLARuAU7OzIyI24BLMnNtRNwIXJWZN3f5TgNOmuFefLH5nrV6HR580FiTJEmC7gE3Z6IPZuYP\nI2JRy+ZzgbOL918BxoCVwDnAdZk5DmyIiPXAsojYCBySmWuLz1wDnAd0DDhJM0sZa9UxyNZY+/CH\nG2OQxpokSVJ3EwZcF/MycytAZm6JiHnF9qOBWyv7bS62jQObKts3FdslzTAvvtg+BlnGWnm/2kc+\nYqxJkiTtjb0NuFZTPu84Ojr66vtarUatVpvqr5A0Sd1i7ZRTdl1ZM9YkSZImNjY2xtjY2IT77dEq\nlMUI5Q2Ve+DuB2qZuTUiFgDfz8zFEbESyMxcXex3E3AFsLHcp9h+PnB2Zn6sy/d5D5w0YKqxVo5C\nPvRQc6yNjDRi7YAD+n20kiRJw22v74ErP1+8StcDHwJWAxcC36psvzYiPktjRPIk4MfFIibbImIZ\nsBa4ALh6b34RSdPvxRfhrruar6yVsTYy0nh99KPGmiRJUq/tySqUXwNqwBHAVhpX1P4W+GvgGBpX\n15Zn5jPF/quAi4EdND9GYCnNjxFYsZvv9Aqc1CMvvNA+BvnQQ/DmNzevBmmsSZIk9Y4P8pbUFmv1\nOqxfb6xJkiQNGgNOmmXKWKsu3d8aayMj8La3GWuSJEmDxoCTZrAXXmi/Z62MtXLp/qVLjTVJkqRh\nYcBJM0RrrNXr8NOfwqmnNo9BGmuSJEnDy4CThlA11spRyNZYK8cg99+/30crSZKkqWLASQPu+efb\nxyDLWGsdgzTWJEmSZjYDThog3WJt8eL2MUhjTZIkafYx4KQ+aY21eh0efthYkyRJUncGnNQDZaxV\nl+6vxlo5CvnWtxprkiRJ6s6Ak6bY88/DnXc2j0E+/DCcdlrzlTVjTZIkSa+VASdNQmus1evwyCPG\nmiRJkqaHASftoTLWqmOQrbE2MtKItf326/fRSpIkaSYy4KQOfvWr9jHIMtaqS/cba5IkSeolA06z\nXrdYe8tb2scgjTVJkiT1kwGnWaUaa+Uo5M9+1hxrIyONvxtrkiRJGjQGnGas7dvbr6xVY60chTTW\nJEmSNCymJeAiYgOwDdgJ7MjMZRExF/g6sAjYACzPzG3F/quAi4BxYEVmrunycw04ddQt1t761uYx\nSGNNkiRJw2y6Au4RYGlmPl3Zthr4ZWZeGRGfAOZm5sqIOA24FjgLWAjcApzcqdQMOEF7rNXrsGGD\nsSZJkqSZb7oC7mfASGb+srLtAeDszNwaEQuAscw8NSJWApmZq4v9vgOMZuZtHX6uATfLlLFWXbp/\n48bOY5Cve12/j1aSJEmaXt0Cbs4kf24C342IV4D/lZl/CczPzK0AmbklIuYV+x4N3Fr57OZim2aZ\n7dvhjjuaxyA3btx1Za1Wg49/3FiTJEmSWk024N6ZmU9ExJuANRHxII2oq/JS2ixmrEmSJElTZ1IB\nl5lPFH/+PCL+FlgGbI2I+ZURyieL3TcDx1Q+vrDY1tHo6Oir72u1GrVabTKHqh6oxlo5Cvnoo82x\n9kd/1HhItrEmSZIk7TI2NsbY2NiE++31PXARcRCwT2Zuj4jXA2uATwLvAp7KzNVdFjF5B43Rye/i\nIiZD67nn2q+slbFW3q+2dKmxJkmSJO2NKV/EJCKOB/6GxojkHODazPx0RBwOfIPG1baNNB4j8Ezx\nmVXAxcAOfIzA0OgWa297W/NqkMaaJEmSNDV8kLf2SGus1evw2GPGmiRJktRLBpzalLFWXbq/Gmvl\nKOTixcaaJEmS1EsG3Cz37LPtY5CPPQann958Zc1YkyRJkvrPgJtFWmOtXodNm9pj7bTTYM5kHyQh\nSZIkacoZcDNUGWvVMcjWWBsZaVxZM9YkSZKk4WDAzQDPPgu33948BlnGWnXpfmNNkiRJGm4G3JDp\nFGubN3e+Z81YkyRJkmYWA26AbdvWfs/a44+3j0GeeqqxJkmSJM0GBtyAKGOtes9aNdbKUUhjTZIk\nSZq9DLg+2LatfQzy8cfh7W9vHoM01iRJkiRVGXDTrDXW6nV44gljTZIkSdJrZ8BNoTLWqmOQ1Vir\njkHuu2+/j1aSJEnSsDHg9tIzz7SPQT7xBJxxRvuVNWNNkiRJ0lQw4PaAsSZJkiRpEBhwLaqxVo5C\nbt3afM/ayAi8+c3GmiRJkqTemtUB9/TT7VfWylgr71dbutRYkyRJkjQYZk3AdYu11jFIY02SJEnS\noOoWcPv04UB+KyIeiIiHIuITk/lZTz8Nf//3cOWV8P73w4knwrHHwuho43lr730v3HBDY1zyH/4B\nPvc5+OAH4bTTjDft3tjYWL8PQbOc56D6zXNQg8DzUP02iOdgTwMuIvYB/hvwHuAtwAci4tQ9+WwZ\na6tXw/Ll7bH2278N3/52e6wtXmys6bUbxP+xanbxHFS/eQ5qEHgeqt8G8Rzs9SOllwHrM3MjQERc\nB5wLPNC64y23NI9BPvkknHlmY/zxnHPgk5+EU04xziRJkiTNHr0OuKOBxyp/30Qj6tp86lPGmiRJ\nkiRV9XQRk4j418B7MvPfF3//d8CyzLy0Zb/BW1lFkiRJknqo0yImvb4Ctxk4tvL3hcW2Jp0OVJIk\nSZJmu16vQrkWOCkiFkXEfsD5wPU9PgZJkiRJGko9vQKXma9ExCXAGhrx+MXMvL+XxyBJkiRJw2og\nH+QtSZIkSWrX8wd5785UPuRbioiFEfG9iLg3Iu6JiEuL7XMjYk1EPBgRN0fEYZXPrIqI9RFxf0S8\nu7J9SUTcXZybn6ts3y8iris+c2tEHIvUIiL2iYjbI+L64u+eg+qZiDgsIv66OKfujYh3eA6ql4pz\n6t7i/Lm2OGc8BzWtIuKLEbE1Iu6ubOvJeRcRFxb7PxgRF0z17zYwATeZh3xLXYwDf5iZbwH+KfD7\nxTm1ErglM98MfA9YBRARpwHLgcXAvwC+EBHlgjr/A7g4M08BTomI9xTbLwaeysyTgc8BV/bmV9OQ\nWQHcV/m756B66SrgxsxcDLydxrNXPQfVExGxCPgIcGZmnk7j9p0P4Dmo6fclGl1RNe3nXUTMBf4L\ncBbwDuCKaihOhYEJOCoP+c7MHUD5kG9pr2Tmlsy8s3i/Hbifxsqn5wJfKXb7CnBe8f4c4LrMHM/M\nDcB6YFlELAAOycy1xX7XVD5T/VnfBN41fb+RhlFELAT+JfCXlc2eg+qJiDgU+OeZ+SWA4tzahueg\neudZ4GXg9RExBziQxgrknoOaVpn5Q+Dpls3Ted79RvH+PcCazNyWmc/QWPvjt6bsF2OwAq7TQ76P\n7tOxaIaJiOOAM4AfAfMzcys0Ig+YV+zWeg5uLrYdTeN8LFXPzVc/k5mvAM9ExOHT8ktoWH0W+E9A\n9YZjz0H1yvHALyLiS9EY4/2LiDgIz0H1SGY+DXwGeJTG+bQtM2/Bc1D9MW8az7ttxXnX7WdNmUEK\nOGlaRMTBNP6fkRXFlbjWlXumciUfn2GoV0XEvwK2FleCd3dueA5quswBlgD/PTOXAL+iMULkfwfV\nExFxAvAfgUXAUTSuxP1bPAc1GIbyvBukgNujh3xLr0UxrvFN4KuZ+a1i89aImF/8+wLgyWL7ZuCY\nysfLc7Db9qbPRMS+wKGZ+dQ0/CoaTu8EzomIR4D/A/xGRHwV2OI5qB7ZBDyWmfXi7/+XRtD530H1\nygjwj5n5VHGV4m+Af4bnoPqjF+fdtDfNIAWcD/nWdPgr4L7MvKqy7XrgQ8X7C4FvVbafX6wqdDxw\nEvDj4hL7tohYVtzQekHLZy4s3r+Pxg2xEgCZeXlmHpuZJ9D4b9r3MvODwA14DqoHilGhxyLilGLT\nu4B78b+D6p0HgX8SEQcU5867aCzq5DmoXgiar4z14ry7GfjNaKwAPBf4zWLb1MnMgXnRuMHvQRo3\nDq7s9/H4Gu4XjasfrwB3AncAtxfn2OHALcW5tgZ4Q+Uzq4Cf0ljw5N2V7UuBe4pz86rK9v2BbxTb\nfwQc1+/f29dgvoCzgeuL956Dvnr2orHy5Nriv4X/DzjMc9BXL1807gO+F7ibxqIPr/Mc9DXdL+Br\nwOPASzTuwfw9YG4vzjsakbgeeAi4YKp/Nx/kLUmSJElDYpBGKCVJkiRJu2HASZIkSdKQMOAkSZIk\naUgYcJIkSZI0JAw4SZIkSRoSBpwkSZIkDQkDTpIkSZKGxP8HViQiqLJM/NYAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x10fe51898>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "z = np.load('../mat/master.npy')\n",
     "fig, ax = plt.subplots(figsize=(15, 3))\n",
