expansion - miroir de la structure - focus

--- a/posts/2015-11-17 élasticité expansion en miroir - dynamique d'un point focal.ipynb
+++ b/posts/2015-11-17 élasticité expansion en miroir - dynamique d'un point focal.ipynb
@@ -13,14 +13,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import matplotlib\n",
     "matplotlib.rcParams['figure.max_open_warning'] = 400\n",
-    "%matplotlib inline\n",
+    "#%matplotlib inline\n",
     "%config InlineBackend.figure_format='retina'\n",
     "#%config InlineBackend.figure_format = 'svg'"
    ]
