--- a/posts/2015-12-05 élasticité - scénario final montage.ipynb
+++ b/posts/2015-12-05 élasticité - scénario final montage.ipynb
@@ -44,18 +44,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 lolo  staff   118K Nov 30 14:16 ../mat/line_vague_solo.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   104K Nov 30 14:16 ../mat/line_vague_dense.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   1.4M Dec  2 16:00 ../mat/line_geometry_structure.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   1.4M Dec  2 16:31 ../mat/line_geometry.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   416K Dec  2 16:51 ../mat/line_onde_dense.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   416K Dec  2 16:51 ../mat/line_onde_solo.npy\r\n",
-      "-rw-r--r--  1 lolo  staff    22M Dec  3 15:36 ../mat/master.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   731K Dec  3 16:07 ../mat/line_fresnelastique.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   731K Dec  3 16:07 ../mat/line_fresnelastique_chirp.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   731K Dec  3 16:07 ../mat/line_fresnelastique_choc.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   1.4M Dec  4 18:51 ../mat/line_geometry_90deg.npy\r\n",
-      "-rw-r--r--  1 lolo  staff   1.4M Dec  4 18:51 ../mat/line_geometry_45deg.npy\r\n"
+      "-rw-r--r--  1 laurentperrinet  staff   118K Nov 30 14:16 ../mat/line_vague_solo.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   104K Nov 30 14:16 ../mat/line_vague_dense.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   1.4M Dec  2 16:00 ../mat/line_geometry_structure.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   416K Dec  2 16:51 ../mat/line_onde_dense.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   416K Dec  2 16:51 ../mat/line_onde_solo.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   731K Dec  3 16:07 ../mat/line_fresnelastique.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   731K Dec  3 16:07 ../mat/line_fresnelastique_chirp.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   731K Dec  3 16:07 ../mat/line_fresnelastique_choc.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   1.4M Dec  4 18:51 ../mat/line_geometry_90deg.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   183K Dec  6 10:58 ../mat/line_contraint.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   1.4M Dec  6 11:00 ../mat/line_geometry_45deg_conflict-20151204-185143.npy\r\n",
+      "-rw-r--r--  1 laurentperrinet  staff   1.4M Dec  6 11:00 ../mat/line_geometry_90deg_conflict-20151204-185143.npy\r\n"
      ]
     }
    ],
