--- a/posts/2015-11-27 élasticité, geometrie.ipynb
+++ b/posts/2015-11-27 élasticité, geometrie.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -607,7 +607,9 @@
       "Delta compression using up to 4 threads.\n",
       "Compressing objects: 100% (11/11), done.\n",
       "Writing objects: 100% (11/11), 1.37 MiB | 0 bytes/s, done.\n",
-      "Total 11 (delta 7), reused 0 (delta 0)\n"
+      "Total 11 (delta 7), reused 0 (delta 0)\n",
+      "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
+      "   317f27e..77922f5  master -> master\n"
      ]
     }
    ],
