HACK pour démarrage au boot

--- a/posts/2015-12-05 élasticité - scénario final montage.ipynb
+++ b/posts/2015-12-05 élasticité - scénario final montage.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -231,20 +231,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/laurentperrinet/cloud_nas/science/elasticte\n",
-      "rm: mat/master.npy: No such file or directory\n",
-      "importing scenarii\n",
-      "line_onde_dense\n",
-      "line_onde_solo\n",
-      "line_fresnelastique\n",
-      "line_fresnelastique_choc\n",
-      "line_fresnelastique_chirp\n",
-      "line_geometry\n",
-      "line_geometry_45deg\n",
-      "line_geometry_90deg\n",
-      "line_geometry_structure\n",
-      "finished importing scenarii\n",
-      "/Users/laurentperrinet/cloud_nas/science/elasticte/posts\n"
+      "/Users/lolo/cloud_nas/science/elasticte\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'filename'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/Users/lolo/cloud_nas/science/elasticte/scenario_line_master.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'mat/master.npy'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m     e = el.EdgeGrid(N_lame=25, grid_type='line', mode=mode,\n\u001b[0;32m--> 106\u001b[0;31m                  verb=False, filename=filename)\n\u001b[0m\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'writer'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'filename'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/lolo/cloud_nas/science/elasticte/posts\n"
      ]
     }
    ],
@@ -328,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -448,6 +453,7 @@
     "    else: mode = 'both'\n",
     "        \n",
     "    filename = 'mat/master_dimanche.npy'\n",
+    "    filename = '/home/pi/elasticte/mat/master_dimanche.npy'\n",
     "    e = el.EdgeGrid(N_lame=25, grid_type='line', mode=mode,\n",
     "                 verb=False, filename=filename)\n",
     "\n",
@@ -614,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -623,22 +629,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mA\u001b[m  ../mat/master_dimanche.npy\r\n",
-      " \u001b[32mM\u001b[m \"2015-12-05 \\303\\251lasticit\\303\\251 - sc\\303\\251nario final montage.ipynb\"\r\n",
-      "\u001b[33mA\u001b[m  ../scenario_line_master_dimanche.py\r\n",
-      "\u001b[36m??\u001b[m ../.scenario_line_geometry.py.~2738e9b\r\n",
-      "\u001b[36m??\u001b[m ../.scenario_line_geometry_45deg.py.~7097635e\r\n",
-      "\u001b[36m??\u001b[m ../.scenario_line_geometry_90deg.py.~62fcea11\r\n",
-      "\u001b[36m??\u001b[m ../mat/line_contraint.npy\r\n",
-      "\u001b[36m??\u001b[m ../mat/line_geometry.npy\r\n",
-      "\u001b[36m??\u001b[m ../mat/line_geometry_45deg.npy\r\n",
-      "\u001b[36m??\u001b[m ../mat/line_geometry_45deg_conflict-20151204-185143.npy\r\n",
-      "\u001b[36m??\u001b[m ../mat/line_geometry_90deg_conflict-20151204-185143.npy\r\n",
-      "\u001b[36m??\u001b[m \"2015-10-14 \\303\\251lasticit\\303\\251, control scenario_conflict-20151204-185143.ipynb\"\r\n",
-      "\u001b[36m??\u001b[m \"2015-11-27 \\303\\251lasticit\\303\\251, geometrie_conflict-20151206-105355.ipynb\"\r\n",
-      "\u001b[36m??\u001b[m \"2015-12-05 \\303\\251lasticit\\303\\251 - sc\\303\\251nario final montage_conflict-20151206-104821.ipynb\"\r\n",
-      "\u001b[36m??\u001b[m ../scenario_line_master_conflict-20151206-104755.py\r\n",
-      "\u001b[36m??\u001b[m ../src/elasticite_conflict-20151204-185143.py\r\n"
+      "\u001b[33mM\u001b[m  ../scenario_line_master_dimanche.py\r\n"
      ]
     }
    ],
@@ -649,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -658,18 +649,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master af352c0]  scenario master\r\n",
-      " 3 files changed, 18 insertions(+), 16 deletions(-)\r\n"
+      "[master 4709768]  scenario master du dimanche\r\n",
+      " 1 file changed, 1 insertion(+)\r\n"
      ]
     }
    ],
    "source": [
-    "!git commit -am' scenario master '"
+    "!git commit -am' scenario master du dimanche '"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -678,10 +669,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 7, done.\n",
-      "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (7/7), done.\n",
-      "^C\n"
+      "Counting objects: 3, done.\n",
+      "Delta compression using up to 8 threads.\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 345 bytes | 0 bytes/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
+      "   a7ab8b9..4709768  master -> master\n"
      ]
     }
    ],
