scenario master HACK3R du dimanche

--- a/posts/2015-12-05 élasticité - scénario final montage.ipynb
+++ b/posts/2015-12-05 élasticité - scénario final montage.ipynb
@@ -351,7 +351,9 @@
     "%%writefile ../scenario_line_master_dimanche.py\n",
     "#!/usr/bin/env python\n",
     "# -*- coding: utf8 -*-\n",
+    "import sys\n",
     "\n",
+    "sys.path.append(path_to_dev_pyworkbooks)\n",
     "import elasticite as el\n",
     "import numpy as np\n",
     "import os\n",
