--- a/posts/2015-11-29 élasticité - scénario onde.ipynb
+++ b/posts/2015-11-29 élasticité - scénario onde.ipynb
@@ -22956,17 +22956,8 @@
     }
    ],
    "source": [
-    "! git push\n"
+    "! git push"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -22985,7 +22976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
