--- a/posts/2015-11-02 élasticité expansion en miroir - principes.ipynb
+++ b/posts/2015-11-02 élasticité expansion en miroir - principes.ipynb
@@ -901,7 +901,7 @@
     }
    ],
    "source": [
-    "! git push\n"
+    "! git push"
    ]
   }
  ],
@@ -921,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
