scenario master HACK3R du dimanche

--- a/posts/2015-12-05 élasticité - scénario final montage.ipynb
+++ b/posts/2015-12-05 élasticité - scénario final montage.ipynb
@@ -432,7 +432,8 @@
     "    if len(sys.argv)>1: mode = sys.argv[1]\n",
     "    else: mode = 'both'\n",
     "        \n",
-    "    filename = '/home/pi/elasticte/mat/master_dimanche.npy'\n",
+    "    #filename = '/home/pi/elasticte/mat/master_dimanche.npy'\n",
+    "    filename = 'mat/master_dimanche.npy'\n",
     "    e = el.EdgeGrid(N_lame=25, grid_type='line', mode=mode,\n",
     "                 verb=False, filename=filename)\n",
     "\n",
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -492,7 +493,7 @@
    ],
    "source": [
     "%cd ..\n",
-    "!rm mat/master_dimanche.npy\n",
+    "#!rm mat/master_dimanche.npy\n",
     "%run  scenario_line_master_dimanche.py writer\n",
     "%cd posts"
    ]
