on connecte le π + coordonnées absolues

--- a/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
+++ b/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -53,7 +53,6 @@
     "````\n",
     "\n",
     "⇒  ssh pi@192.168.2.3\n",
-    "pi@192.168.2.3's password: tropic\n",
     "\n",
     "Linux pielastic 3.18.7-v7+ #755 SMP PREEMPT Thu Feb 12 17:20:48 GMT 2015 armv7l\n",
     "\n",
@@ -306,7 +305,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fatal: unable to read 0474e6b1ed0786cde408cca646c82206efe068f0\r\n"
+      "\u001b[36m??\u001b[m __temp_ipython__.png\r\n",
+      "\u001b[36m??\u001b[m anim.gif\r\n"
      ]
     }
    ],
@@ -326,9 +326,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 3fe6295]  on connecte le π + coordonnées absolues\r\n",
-      " 2 files changed, 225 insertions(+), 341 deletions(-)\r\n",
-      " delete mode 100644 \"posts/2015-11-17 \\303\\251lasticit\\303\\251 expansion en miroir - dynamique d'un point focal.ipynb\"\r\n"
+      "On branch master\r\n",
+      "Your branch is up-to-date with 'origin/master'.\r\n",
+      "Untracked files:\r\n",
+      "\t\u001b[36m__temp_ipython__.png\u001b[m\r\n",
+      "\t\u001b[36manim.gif\u001b[m\r\n",
+      "\r\n",
+      "nothing added to commit but untracked files present\r\n"
      ]
     }
    ],
@@ -347,13 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 20, done.\n",
-      "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (20/20), done.\n",
-      "Writing objects: 100% (20/20), 83.92 KiB | 0 bytes/s, done.\n",
-      "Total 20 (delta 12), reused 0 (delta 0)\n",
-      "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
-      "   5998394..3fe6295  master -> master\n"
+      "Everything up-to-date\r\n"
      ]
     }
    ],
@@ -378,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
