--- a/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
+++ b/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -326,13 +326,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch master\r\n",
-      "Your branch is up-to-date with 'origin/master'.\r\n",
-      "Untracked files:\r\n",
-      "\t\u001b[36m__temp_ipython__.png\u001b[m\r\n",
-      "\t\u001b[36manim.gif\u001b[m\r\n",
-      "\r\n",
-      "nothing added to commit but untracked files present\r\n"
+      "[master e968673]  on connecte le π + coordonnées absolues\r\n",
+      " 1 file changed, 12 insertions(+), 14 deletions(-)\r\n"
      ]
     }
    ],
@@ -342,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -351,7 +346,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\r\n"
+      "Counting objects: 4, done.\n",
+      "Delta compression using up to 4 threads.\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 636 bytes | 0 bytes/s, done.\n",
+      "Total 4 (delta 3), reused 0 (delta 0)\n",
+      "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
+      "   9dd54ff..e968673  master -> master\n"
      ]
     }
    ],
